[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
gradio = "^3.38.0"
langchain = "^0.0.257"
pinecone-client = "^2.2.2"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
ipykernel = "^6.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
